Infra codes/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - webapp.tharindu.com
    - api.tharindu.com
    secretName: wp-tls-secret
  rules:
  - host: webapp.tharindu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-webapp
            port:
              number: 80
  - host: api.tharindu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-api
            port:
              number: 80
